[package]
name = "gfx_text"
version = "0.17.0"
authors = ["Kagami Hiiragi <kagami@genshiken.org>"]
description = "Draw text for gfx using freetype."
keywords = ["gfx", "graphics", "text", "freetype", "font"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PistonDevelopers/gfx_text"
repository = "https://github.com/PistonDevelopers/gfx_text.git"
documentation = "http://docs.piston.rs/gfx_text/gfx_text/"

[dependencies]
freetype-rs = "0.13"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx"
rev = "d2425de"

[features]
default = ["include-font"]
include-font = []

### For examples

[dev-dependencies]
gfx_window_glutin = "0.15.0"
glutin = "0.7.1"
#log = "*"
#env_logger = "*"
